Bug 262578. No click to focus css scrollable areas like overflow:scroll, but you can still click there and scroll -- just no focus outline. r=mats, sr=roc